fixed some last issues with naming